Hack in current loans.

--- a/www/lendingbot.html
+++ b/www/lendingbot.html
@@ -145,6 +145,17 @@
                 <tbody id="logtable">
                 </tbody>
             </table>
+            <table class="table table-responsive">
+                    <tr>
+                        <th colspan="3">Current Loans<th>
+                    </tr>
+                    <tr>
+			<td>
+				<table class="table table-striped table-responsive" id="currentLoans">
+				</table>
+			</td>
+		    </tr>
+		</table>
         </div>
     </div>
     <!-- /.container -->
