--- a/www/lendingbot.html
+++ b/www/lendingbot.html
@@ -146,16 +146,14 @@
                 </tbody>
             </table>
             <table class="table table-responsive">
+	        <thead>
                     <tr>
                         <th colspan="3">Current Loans<th>
                     </tr>
-                    <tr>
-			<td>
-				<table class="table table-striped table-responsive" id="currentLoans">
-				</table>
-			</td>
-		    </tr>
-		</table>
+		</thead>
+	            <tbody class="table table-striped table-responsive" id="currentLoans">
+		    </tbody>
+	    </table>
         </div>
     </div>
     <!-- /.container -->
